--- a/src/app/pagination/pagination.component.html
+++ b/src/app/pagination/pagination.component.html
@@ -6,7 +6,7 @@
 
 <ul class="pagination">
   
-  <li *ngFor="let post of pageN; index as i" (click)="getDataToShow(i+1)"><a      routerLink="#">{{i+1}}</a>
+  <li class="paginationBtn" *ngFor="let post of pageN; index as i" (click)="getDataToShow(i+1)"><a      routerLink="#">{{i+1}}</a>
   </li>
   
   
