--- a/src/app/pagination/pagination.component.html
+++ b/src/app/pagination/pagination.component.html
@@ -1,12 +1,12 @@
 <h1 >Data Pagination Demo</h1>
 
-<ul>
-  <li *ngFor="let post of post">{{post.officeName}}</li>
+<ul class="list-group">
+  <li class="list-group-item" *ngFor="let post of post">{{post.officeName}}</li>
 </ul>
 
 <ul class="pagination">
   
-  <li class="paginationBtn" *ngFor="let post of pageN; index as i" (click)="getDataToShow(i+1)"><a      routerLink="#">{{i+1}}</a>
+  <li  *ngFor="let post of pageN; index as i" (click)="getDataToShow(i+1)"><a class="paginationBtn"  routerLink="/"  >{{i+1}}</a>
   </li>
   
   
