--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
+body{
+  padding:80px 20px 80px 80px;
+  
+    
+  
+}
